# namegen

./: .gitignore  404.html  CMakeLists.txt  README.md  _config.yml  index.html  mkdocs.yml
.cache/clangd/index/: namegen.hpp.49A0016AC478286A.idx  namegen_example.cpp.A552DFE34F756E23.idx
.github/workflows/: documentation.yml
docs/: CMakeLists.txt  doxyfile.in  doxygen.css  footer.html  index.md
example/: example.cpp  namegen_example.cpp
examples/: simple.cpp  tokens.json
include/namegen/: namegen.hpp
search/: search_index.json
